logs/jvm/bytecode-test-example-jvm.log
Test.scala:14: error: type mismatch;
 found   : org.objectweb.asm.tree.InsnList
 required: scala.tools.asm.tree.InsnList
    println(countNullChecks(methodNode.instructions))
                                       ^
one error found
